# strava_analyzer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  context_pipeline.md  data_model.md  naming_parser.md
llm_context/: README.md
llm_context/decisions/: 0001_v1_architecture.md
llm_context/journals/: 2026-03-22_project_bootstrap.md
llm_context/runbooks/: add_parser_rule.md  ingest_latest_export.md
notebooks/: starter_analysis.ipynb
src/strava_analyzer/: __init__.py  catalog.py  cli.py  constants.py  context_export.py  ingest.py  naming.py  query.py  routes.py
tests/: test_ingest_utils.py  test_integration_pipeline.py  test_naming.py  test_routes.py
tests/fixtures/sample_export/export_0001/: activities.csv  bikes.csv  shoes.csv
tests/fixtures/sample_export/export_0001/activities/: 1.gpx  2.fit
